0.9.2.dev2
-------------------------------

- improve automatic server handling via "devpi use"

- for "devpi server" you now need to specify "--log" to see log lines

- introduce "devpi upload --fromdir" for uploading archives in bulk
  mode, thanks to Anthon van der Neut for helping with this!
  (resolved issue5)

- make "devpi use" also show base indexes by default

0.9.1
-------------------------------

- refined "python setup.py" calls from ``devpi upload`` with proper
  ``__file__`` attributes.  Thanks Andi Albrecht.

- implemented new "devpi push" command for pushing out releases

- improved error handling for devpi upload

- fix logoff if not logged in

- don't use --force-reinstall when using pip

0.9 initial release
-------------------------------
